fixed the flicker keyframes

--- a/style.css
+++ b/style.css
@@ -39,6 +39,27 @@
   }
 }
 
+@keyframes flicker {
+
+  0%,
+  96%,
+  100% {
+    opacity: 1;
+  }
+
+  97% {
+    opacity: 0.85;
+  }
+
+  98% {
+    opacity: 1;
+  }
+
+  99% {
+    opacity: 0.7;
+  }
+}
+
 /* base */
 
 html {
